# query_tool

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/query_tool/: __main__.py  __main__py  main.py
tests/query_tool/: test_main.py
